# enumerate

./: CLAUDE.md  Cargo.toml  README.md  SKILL.md
docs/: V1_SPEC.md  V1_UI_SPEC.md  enumerate-skill-rewrite.md  sample.md  template-design.md  test_overlap.md
src/: gitignore.rs  lib.rs  main.rs  popup.rs  tmux.rs  walk.rs
src/doc/: mod.rs  parse.rs  serialize.rs
src/tui/: mod.rs  state.rs  view.rs
tests/: parse_roundtrip.rs
tests/fixtures/: canonical.md  sample.md
